--- a/src/components/profile-form/profile-form.html
+++ b/src/components/profile-form/profile-form.html
@@ -1,94 +1,95 @@
-<form [formGroup]="profileForm" (ngSubmit)="submitForm()" novalidate>
+<form [ngClass]="{'edit-mode': isEditMode(), 'read-only': !isEditMode()}" [formGroup]="profileForm" (ngSubmit)="submitForm()"
+    novalidate>
     <ion-list>
         <div class="row form-group">
             <div *ngIf="formType === 'doctor'">
                 <ion-label class="form-label h1">PRC License *</ion-label>
                 <ion-item round>
-                    <ion-input type="number" formControlName="prc"></ion-input>
+                    <ion-input type="number" name="prc" formControlName="prc" [disabled]="!isEditMode()"></ion-input>
                 </ion-item>
-                <div class="error-message" *ngIf="profileForm.get('prc').dirty && profileForm.get('prc').invalid">
+                <div class="error-message" *ngIf="profileForm.get('prc')?.dirty && profileForm.get('prc').invalid">
                     {{ errors.prc }}
                 </div>
                 <ion-label class="form-label h1">PTR *</ion-label>
                 <ion-item round>
-                    <ion-input type="number" formControlName="ptr"></ion-input>
+                    <ion-input type="number" name="ptr" formControlName="ptr" [disabled]="!isEditMode()"></ion-input>
                 </ion-item>
-                <div class="error-message" *ngIf="profileForm.get('ptr').dirty &&  profileForm.get('ptr').invalid">
+                <div class="error-message" *ngIf="profileForm.get('ptr')?.dirty &&  profileForm.get('ptr').invalid">
                     {{ errors.ptr }}
                 </div>
-                <ion-label class="form-label h1">Doctor Type *</ion-label>
+                <ion-label class="form-label h1">Medical Arts *</ion-label>
                 <ion-item round>
-                    <ion-select class="options" formControlName="doctorType">
-                        <ion-option *ngFor="let type of doctorTypes" value="{{ type.code }}">{{ type.description }}</ion-option>
+                    <ion-select class="options" name="medicalArt" formControlName="medicalArt">
+                        <ion-option *ngFor="let type of medicalArts" value="{{ type?.code }}">{{ type?.description }}</ion-option>
                     </ion-select>
                 </ion-item>
-                <div class="error-message" *ngIf="profileForm.get('doctorType').dirty &&  profileForm.get('doctorType').invalid">
+                <div class="error-message" *ngIf="profileForm.get('medicalArt')?.dirty &&  profileForm.get('medicalArt').invalid">
                     {{ errors.doctorType }}
                 </div>
                 <ion-label class="form-label h1">Specialization *</ion-label>
                 <ion-item round>
-                    <ion-input formControlName="specialization"></ion-input>
+                    <ion-input name="birthDate" formControlName="specialization" [disabled]="!isEditMode()"></ion-input>
                 </ion-item>
-                <div class="error-message" *ngIf="profileForm.get('specialization').dirty &&  profileForm.get('specialization').invalid">
+                <div class="error-message" *ngIf="profileForm.get('specialization')?.dirty &&  profileForm.get('specialization').invalid">
                     {{ errors.specialization }}
                 </div>
             </div>
             <ion-label class="form-label h1">Email *</ion-label>
             <ion-item round>
-                <ion-input type="email" formControlName="email"></ion-input>
+                <ion-input type="email" name="email" formControlName="email" [disabled]="!isEditMode()"></ion-input>
             </ion-item>
-            <div class="error-message" *ngIf="profileForm.get('email').dirty &&  profileForm.get('email').invalid">
+            <div class="error-message" *ngIf="profileForm.get('email')?.dirty &&  profileForm.get('email').invalid">
                 {{ errors.email }}
             </div>
             <ion-label class="form-label h1">Last Name *</ion-label>
             <ion-item round>
-                <ion-input formControlName="lastName"></ion-input>
+                <ion-input name="lastName" formControlName="lastName" [disabled]="!isEditMode()"></ion-input>
             </ion-item>
-            <div class="error-message" *ngIf="profileForm.get('lastName').dirty &&  profileForm.get('lastName').invalid">
+            <div class="error-message" *ngIf="profileForm.get('lastName')?.dirty &&  profileForm.get('lastName').invalid">
                 {{ errors.lastName }}
             </div>
             <ion-label class="form-label h1">First Name *</ion-label>
             <ion-item round>
-                <ion-input formControlName="firstName"></ion-input>
+                <ion-input name="firstName" formControlName="firstName" [disabled]="!isEditMode()"></ion-input>
             </ion-item>
-            <div class="error-message" *ngIf="profileForm.get('firstName').dirty &&  profileForm.get('firstName').invalid">
+            <div class="error-message" *ngIf="profileForm.get('firstName')?.dirty &&  profileForm.get('firstName').invalid">
                 {{ errors.firstName }}
             </div>
             <ion-label class="form-label h1">Middle Name</ion-label>
             <ion-item round>
-                <ion-input formControlName="middleName"></ion-input>
+                <ion-input name="middleName" formControlName="middleName" [disabled]="!isEditMode()"></ion-input>
             </ion-item>
             <ion-label class="form-label h1">Birth Date *</ion-label>
             <ion-item round>
-                <ion-input type="date" formControlName="birthDate"></ion-input>
+                <ion-input type="date" name="birthDate" formControlName="birthDate" [disabled]="!isEditMode()"></ion-input>
             </ion-item>
-            <div class="error-message" *ngIf="profileForm.get('birthDate').dirty &&  profileForm.get('birthDate').invalid">
+            <div class="error-message" *ngIf="profileForm.get('birthDate')?.dirty &&  profileForm.get('birthDate').invalid">
                 {{ errors.birthDate }}
             </div>
             <ion-label class="form-label h1">Gender *</ion-label>
             <ion-list radio-group name="gender" formControlName="gender">
                 <ion-item *ngFor="let gender of genderList">
-                    <ion-radio color="primary" value="{{ gender.id }}"></ion-radio>
-                    <ion-label>{{ gender.description }}</ion-label>
+                    <ion-radio color="primary" value="{{ gender?.id }}" [disabled]="!isEditMode()"></ion-radio>
+                    <ion-label>{{ gender?.description }}</ion-label>
                 </ion-item>
             </ion-list>
-            <div class="error-message" *ngIf="profileForm.get('gender').dirty &&  profileForm.get('gender').invalid">
+            <div class="error-message" *ngIf="isEditMode() && profileForm.get('gender')?.dirty &&  profileForm.get('gender').invalid">
                 {{ errors.gender }}
             </div>
             <ion-label class="form-label h1">Address</ion-label>
             <ion-item round>
-                <ion-input formControlName="address"></ion-input>
+                <ion-input name="address" formControlName="address" [disabled]="!isEditMode()"></ion-input>
             </ion-item>
             <ion-label class="form-label h1">Contact No. *</ion-label>
             <ion-item round>
-                <ion-input formControlName="contactNo"></ion-input>
+                <ion-input name="contactNo" formControlName="contactNo" [disabled]="!isEditMode()"></ion-input>
             </ion-item>
-            <div class="error-message" *ngIf="profileForm.get('contactNo').dirty &&  profileForm.get('contactNo').invalid">
+            <div class="error-message" *ngIf="profileForm.get('contactNo')?.dirty &&  profileForm.get('contactNo').invalid">
                 {{ errors.contactNo }}
             </div>
         </div>
     </ion-list>
     <div center>
-        <button type="submit" ion-button round large color="accent" [disabled]="profileForm.invalid"> Submit </button>
+        <button type="submit" ion-button round large color="accent" *ngIf="isEditMode()" [disabled]="profileForm.invalid"> Submit </button>
     </div>
 </form>
