implemented old password and onclick validations for change password form

--- a/src/components/change-password-form/change-password-form.html
+++ b/src/components/change-password-form/change-password-form.html
@@ -1,23 +1,30 @@
 <form [formGroup]="changePasswordForm" (ngSubmit)="submitForm()" noValidate>
     <ion-list>
         <div class="row form-group">
+            <ion-label class="form-label h1">Old Password</ion-label>
+            <ion-item round>
+                <ion-input type="password" formControlName="oldPassword"></ion-input>
+            </ion-item>
+            <div class="error-message" *ngIf="changePasswordForm.get('oldPassword').invalid">
+                {{ errors.oldPassword }}
+            </div>
             <ion-label class="form-label h1">Password</ion-label>
             <ion-item round>
                 <ion-input type="password" formControlName="password"></ion-input>
             </ion-item>
-            <div class="error-message" *ngIf="changePasswordForm.get('password').dirty && changePasswordForm.get('password').invalid">
+            <div class="error-message" *ngIf="changePasswordForm.get('password').invalid">
                 {{ errors.password }}
             </div>
             <ion-label class="form-label h1">Re-Type Password</ion-label>
             <ion-item round>
                 <ion-input type="password" formControlName="confirm"></ion-input>
             </ion-item>
-            <div class="error-message" *ngIf="changePasswordForm.get('confirm').dirty && changePasswordForm.get('confirm').invalid">
+            <div class="error-message" *ngIf="changePasswordForm.get('confirm').invalid">
                 {{ errors.confirm }}
             </div>
         </div>
     </ion-list>
     <div center>
-        <button ion-button round large color="accent" [disabled]="changePasswordForm.invalid"> Change Password </button>
+        <button ion-button round large color="accent" [disabled]="changePasswordForm.pristine"> Change Password </button>
     </div>
 </form>
