up ionic version to 2.3.0; apply xhr on change password; set profile details to responsive tablet and phone design

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -228,7 +228,7 @@ ion-content{
 	}
 
     .error-message{
-    	margin: 5%;
+    	margin: 10px;
     	text-align: left;
     	color: $danger;
     }
