--- a/src/components/profile-form/profile-form.html
+++ b/src/components/profile-form/profile-form.html
@@ -2,38 +2,135 @@
     novalidate>
     <ion-list>
         <div class="row form-group" *ngIf="usage === 'profile'">
-            <div *ngIf="formType === 'doctor' || formType === 'doctor'">
-                <ion-label class="form-label h1">PRC License <span *ngIf="isEditMode()">*</span></ion-label>
-                <ion-item round>
-                    <ion-input type="number" name="prc" formControlName="prc" [disabled]="!isEditMode()"></ion-input>
-                </ion-item>
-                <div class="error-message" *ngIf="profileForm.get('prc')?.dirty && profileForm.get('prc').invalid">
-                    {{ errors.prc }}
+            <ion-grid>
+                <ion-row>
+                    <ion-col col-12 col-sm-12 col-md-4 >
+                        <ion-label class="form-label h1">Last Name <span *ngIf="isEditMode()">*</span></ion-label>
+                        <ion-item round>
+                            <ion-input name="lastName" formControlName="lastName" [disabled]="!isEditMode()"></ion-input>
+                        </ion-item>
+                        <div class="error-message" *ngIf="profileForm.get('lastName')?.dirty &&  profileForm.get('lastName').invalid">
+                            {{ errors.lastName }}
+                        </div>
+                    </ion-col>
+                    <ion-col col-12 col-sm-12 col-md-4>
+                    <ion-label class="form-label h1">First Name <span *ngIf="isEditMode()">*</span></ion-label>
+                    <ion-item round>
+                        <ion-input name="firstName" formControlName="firstName" [disabled]="!isEditMode()"></ion-input>
+                    </ion-item>
+                    <div class="error-message" *ngIf="profileForm.get('firstName')?.dirty &&  profileForm.get('firstName').invalid">
+                        {{ errors.firstName }}
+                    </div>
+                    </ion-col>
+                    <ion-col col-12 col-sm-12 col-md-4>
+                    <ion-label class="form-label h1">Middle Name</ion-label>
+                    <ion-item round>
+                        <ion-input name="middleName" formControlName="middleName" [disabled]="!isEditMode()"></ion-input>
+                    </ion-item>
+                    </ion-col>
+                </ion-row>
+                <div *ngIf="formType === 'doctor' || formType === 'doctor'">
+                    <ion-row>
+                        <ion-col>
+                            <ion-label class="form-label h1">PRC License <span *ngIf="isEditMode()">*</span></ion-label>
+                            <ion-item round>
+                                <ion-input type="number" name="prc" formControlName="prc" [disabled]="!isEditMode()"></ion-input>
+                            </ion-item>
+                            <div class="error-message" *ngIf="profileForm.get('prc')?.dirty && profileForm.get('prc').invalid">
+                                {{ errors.prc }}
+                            </div>
+                        </ion-col>
+                    </ion-row>
+                    <ion-row>
+                        <ion-col>
+                            <ion-label class="form-label h1">PTR <span *ngIf="isEditMode()">*</span></ion-label>
+                            <ion-item round>
+                                <ion-input type="number" name="ptr" formControlName="ptr" [disabled]="!isEditMode()"></ion-input>
+                            </ion-item>
+                            <div class="error-message" *ngIf="profileForm.get('ptr')?.dirty &&  profileForm.get('ptr').invalid">
+                                {{ errors.ptr }}
+                            </div>
+                        </ion-col>
+                    </ion-row>
+                    <ion-row>
+                        <ion-col col-12 col-sm-12 col-md-6>
+                            <ion-label class="form-label h1">Medical Arts <span *ngIf="isEditMode()">*</span></ion-label>
+                            <ion-item round>
+                                <ion-select class="options" name="medicalArt" formControlName="medicalArt">
+                                    <ion-option *ngFor="let type of medicalArts" value="{{ type?.code }}">{{ type?.description }}</ion-option>
+                                </ion-select>
+                            </ion-item>
+                            <div class="error-message" *ngIf="profileForm.get('medicalArt')?.dirty &&  profileForm.get('medicalArt').invalid">
+                                {{ errors.doctorType }}
+                            </div>
+                        </ion-col>
+                        <ion-col col-12 col-sm-12 col-md-6>
+                            <ion-label class="form-label h1">Specialization <span *ngIf="isEditMode()">*</span></ion-label>
+                            <ion-item round>
+                                <ion-input name="specialization" formControlName="specialization" [disabled]="!isEditMode()"></ion-input>
+                            </ion-item>
+                            <div class="error-message" *ngIf="profileForm.get('specialization')?.dirty &&  profileForm.get('specialization').invalid">
+                                {{ errors.specialization }}
+                            </div>
+                        </ion-col>
+                    </ion-row>
                 </div>
-                <ion-label class="form-label h1">PTR <span *ngIf="isEditMode()">*</span></ion-label>
-                <ion-item round>
-                    <ion-input type="number" name="ptr" formControlName="ptr" [disabled]="!isEditMode()"></ion-input>
-                </ion-item>
-                <div class="error-message" *ngIf="profileForm.get('ptr')?.dirty &&  profileForm.get('ptr').invalid">
-                    {{ errors.ptr }}
-                </div>
-                <ion-label class="form-label h1">Medical Arts <span *ngIf="isEditMode()">*</span></ion-label>
-                <ion-item round>
-                    <ion-select class="options" name="medicalArt" formControlName="medicalArt">
-                        <ion-option *ngFor="let type of medicalArts" value="{{ type?.code }}">{{ type?.description }}</ion-option>
-                    </ion-select>
-                </ion-item>
-                <div class="error-message" *ngIf="profileForm.get('medicalArt')?.dirty &&  profileForm.get('medicalArt').invalid">
-                    {{ errors.doctorType }}
-                </div>
-                <ion-label class="form-label h1">Specialization <span *ngIf="isEditMode()">*</span></ion-label>
-                <ion-item round>
-                    <ion-input name="birthDate" formControlName="specialization" [disabled]="!isEditMode()"></ion-input>
-                </ion-item>
-                <div class="error-message" *ngIf="profileForm.get('specialization')?.dirty &&  profileForm.get('specialization').invalid">
-                    {{ errors.specialization }}
-                </div>
-            </div>
+                <ion-row>
+                    <ion-col col-12 col-sm-12 col-md-6>
+                        <ion-label class="form-label h1">Email <span *ngIf="isEditMode()">*</span></ion-label>
+                        <ion-item round>
+                            <ion-input type="email" name="email" formControlName="email" [disabled]="!isEditMode()"></ion-input>
+                        </ion-item>
+                        <div class="error-message" *ngIf="profileForm.get('email')?.dirty &&  profileForm.get('email').invalid">
+                            {{ errors.email }}
+                        </div>
+                    </ion-col>
+                    <ion-col col-12 col-sm-12 col-md-6>
+                        <ion-label class="form-label h1">Contact No. <span *ngIf="isEditMode()">*</span></ion-label>
+                        <ion-item round>
+                            <ion-input name="contactNo" formControlName="contactNo" [disabled]="!isEditMode()"></ion-input>
+                        </ion-item>
+                        <div class="error-message" *ngIf="profileForm.get('contactNo')?.dirty &&  profileForm.get('contactNo').invalid">
+                            {{ errors.contactNo }}
+                        </div>
+                    </ion-col>
+                </ion-row>
+                <ion-row>
+                    <ion-col  col-12 col-sm-6 col-md-6>
+                        <ion-label class="form-label h1">Gender <span *ngIf="isEditMode()">*</span></ion-label>
+                        <ion-list *ngIf="isEditMode()" radio-group name="gender" formControlName="gender">
+                            <ion-item *ngFor="let gender of genderList">
+                                <ion-radio color="primary" value="{{ gender?.id }}" [disabled]="!isEditMode()"></ion-radio>
+                                <ion-label>{{ gender?.description }}</ion-label>
+                            </ion-item>
+                        </ion-list>
+                        <p *ngIf="!isEditMode()">{{ gender ? gender.description : "" }}</p>
+                        <div class="error-message" *ngIf="isEditMode() && profileForm.get('gender')?.dirty &&  profileForm.get('gender').invalid">
+                            {{ errors.gender }}
+                        </div>
+                    </ion-col>
+                    <ion-col  col-12 col-sm-6 col-md-6>
+                        <ion-label class="form-label h1">Birth Date <span *ngIf="isEditMode()">*</span></ion-label>
+                        <ion-item round>
+                            <ion-input type="date" name="birthDate" formControlName="birthDate" [disabled]="!isEditMode()"></ion-input>
+                        </ion-item>
+                        <div class="error-message" *ngIf="profileForm.get('birthDate')?.dirty &&  profileForm.get('birthDate').invalid">
+                            {{ errors.birthDate }}
+                        </div>
+                    </ion-col>
+                </ion-row>
+                <ion-row>
+                    <ion-col>
+                        <ion-label class="form-label h1">Address</ion-label>
+                        <ion-item round>
+                            <ion-input name="address" formControlName="address" [disabled]="!isEditMode()"></ion-input>
+                        </ion-item>
+                    </ion-col>
+                </ion-row>
+                
+            </ion-grid>
+        </div>
+        <!-- <div class="row form-group" *ngIf="usage !== 'profile'">
             <ion-label class="form-label h1">Email <span *ngIf="isEditMode()">*</span></ion-label>
             <ion-item round>
                 <ion-input type="email" name="email" formControlName="email" [disabled]="!isEditMode()"></ion-input>
@@ -41,63 +138,7 @@
             <div class="error-message" *ngIf="profileForm.get('email')?.dirty &&  profileForm.get('email').invalid">
                 {{ errors.email }}
             </div>
-            <ion-label class="form-label h1">Last Name <span *ngIf="isEditMode()">*</span></ion-label>
-            <ion-item round>
-                <ion-input name="lastName" formControlName="lastName" [disabled]="!isEditMode()"></ion-input>
-            </ion-item>
-            <div class="error-message" *ngIf="profileForm.get('lastName')?.dirty &&  profileForm.get('lastName').invalid">
-                {{ errors.lastName }}
-            </div>
-            <ion-label class="form-label h1">First Name <span *ngIf="isEditMode()">*</span></ion-label>
-            <ion-item round>
-                <ion-input name="firstName" formControlName="firstName" [disabled]="!isEditMode()"></ion-input>
-            </ion-item>
-            <div class="error-message" *ngIf="profileForm.get('firstName')?.dirty &&  profileForm.get('firstName').invalid">
-                {{ errors.firstName }}
-            </div>
-            <ion-label class="form-label h1">Middle Name</ion-label>
-            <ion-item round>
-                <ion-input name="middleName" formControlName="middleName" [disabled]="!isEditMode()"></ion-input>
-            </ion-item>
-            <ion-label class="form-label h1">Birth Date <span *ngIf="isEditMode()">*</span></ion-label>
-            <ion-item round>
-                <ion-input type="date" name="birthDate" formControlName="birthDate" [disabled]="!isEditMode()"></ion-input>
-            </ion-item>
-            <div class="error-message" *ngIf="profileForm.get('birthDate')?.dirty &&  profileForm.get('birthDate').invalid">
-                {{ errors.birthDate }}
-            </div>
-            <ion-label class="form-label h1">Gender <span *ngIf="isEditMode()">*</span></ion-label>
-            <ion-list *ngIf="isEditMode()" radio-group name="gender" formControlName="gender">
-                <ion-item *ngFor="let gender of genderList">
-                    <ion-radio color="primary" value="{{ gender?.id }}" [disabled]="!isEditMode()"></ion-radio>
-                    <ion-label>{{ gender?.description }}</ion-label>
-                </ion-item>
-            </ion-list>
-            <p *ngIf="!isEditMode()">{{ gender ? gender.description : "" }}</p>
-            <div class="error-message" *ngIf="isEditMode() && profileForm.get('gender')?.dirty &&  profileForm.get('gender').invalid">
-                {{ errors.gender }}
-            </div>
-            <ion-label class="form-label h1">Address</ion-label>
-            <ion-item round>
-                <ion-input name="address" formControlName="address" [disabled]="!isEditMode()"></ion-input>
-            </ion-item>
-            <ion-label class="form-label h1">Contact No. <span *ngIf="isEditMode()">*</span></ion-label>
-            <ion-item round>
-                <ion-input name="contactNo" formControlName="contactNo" [disabled]="!isEditMode()"></ion-input>
-            </ion-item>
-            <div class="error-message" *ngIf="profileForm.get('contactNo')?.dirty &&  profileForm.get('contactNo').invalid">
-                {{ errors.contactNo }}
-            </div>
-        </div>
-        <div class="row form-group" *ngIf="usage !== 'profile'">
-            <ion-label class="form-label h1">Email <span *ngIf="isEditMode()">*</span></ion-label>
-            <ion-item round>
-                <ion-input type="email" name="email" formControlName="email" [disabled]="!isEditMode()"></ion-input>
-            </ion-item>
-            <div class="error-message" *ngIf="profileForm.get('email')?.dirty &&  profileForm.get('email').invalid">
-                {{ errors.email }}
-            </div>
-        </div>
+        </div> -->
     </ion-list>
     <div center>
         <button type="submit" ion-button round large color="accent" *ngIf="isEditMode()" [disabled]="profileForm.invalid"> Submit </button>
