--- a/src/components/profile-form/profile-form.html
+++ b/src/components/profile-form/profile-form.html
@@ -1,4 +1,4 @@
-<form [ngClass]="{'edit-mode': isEditMode(), 'read-only': !isEditMode()}" [formGroup]="profileForm" (ngSubmit)="submitForm()"
+<form [ngClass]="{'edit-mode': isEditMode(), 'read-only': !isEditMode()}" [formGroup]="profileForm" (ngSubmit)="submitForm()" #form="ngForm"
     novalidate>
     <ion-list>
         <div class="row form-group" *ngIf="usage === 'profile'">
@@ -123,7 +123,7 @@
                     <ion-col>
                         <ion-label class="form-label h1">Address</ion-label>
                         <ion-item round>
-                            <ion-input name="address" formControlName="address" [disabled]="!isEditMode()"></ion-input>
+                            <ion-textarea name="address" formControlName="address" [disabled]="!isEditMode()"></ion-textarea>
                         </ion-item>
                     </ion-col>
                 </ion-row>
@@ -141,6 +141,6 @@
         </div> -->
     </ion-list>
     <div center>
-        <button type="submit" ion-button round large color="accent" *ngIf="isEditMode()" [disabled]="profileForm.invalid"> Submit </button>
+        <xhr-button round large color="accent" *ngIf="isEditMode()" [disabled]="profileForm.invalid" [disabled]="form.invalid"> Submit </xhr-button>
     </div>
 </form>
