update profile for assistant

--- a/src/components/change-password-form/change-password-form.html
+++ b/src/components/change-password-form/change-password-form.html
@@ -1,6 +1,6 @@
 <form [formGroup]="changePasswordForm" (ngSubmit)="submitForm()" noValidate>
     <ion-list>
-        <div class="row form-group">
+        <div class="form-group">
             <ion-label class="form-label h1">Old Password</ion-label>
             <ion-item round>
                 <ion-input type="password" formControlName="oldPassword"></ion-input>
