--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -72,6 +72,7 @@ $tabs-md-tab-text-color: $accent-light;
 $loading-md-background: rgba(0,0,0,0);
 $loading-md-spinner-color: $light;
 $loading-md-text-color : $light;
+$loading-md-box-shadow-color: none;
 
 // App Windows Variables
 // --------------------------------------------------
