fixed details retrieval in profile form. implemented usage of root nav

--- a/src/components/profile-form/profile-form.html
+++ b/src/components/profile-form/profile-form.html
@@ -29,7 +29,7 @@
                     </ion-item>
                     </ion-col>
                 </ion-row>
-                <div *ngIf="formType === 'doctor' || formType === 'doctor'">
+                <div *ngIf="formType === 'doctor'">
                     <ion-row>
                         <ion-col col-12 col-sm-6 col-md-6>
                             <ion-label class="form-label h1">PRC License <span *ngIf="isEditMode()">*</span></ion-label>
