--- a/src/components/change-password-form/change-password-form.html
+++ b/src/components/change-password-form/change-password-form.html
@@ -1,4 +1,4 @@
-<form [formGroup]="changePasswordForm" (ngSubmit)="submitForm()" noValidate>
+<form [formGroup]="changePasswordForm" (ngSubmit)="submitForm(xhr)">
     <ion-list>
         <div class="form-group">
             <ion-label class="form-label h1">Old Password</ion-label>
@@ -25,6 +25,6 @@
         </div>
     </ion-list>
     <div center>
-        <xhr-button  round large color="accent" [disabled]="changePasswordForm.pristine"> Change Password </xhr-button>
+        <xhr-button  #xhr round large color="accent" [disabled]="changePasswordForm.pristine"> Change Password </xhr-button>
     </div>
 </form>
