fixed profile form submit button visibility. implemented clinic manager page

--- a/src/components/profile-form/profile-form.html
+++ b/src/components/profile-form/profile-form.html
@@ -140,7 +140,7 @@
     </ion-list>
     <div center>
         <xhr-button #xhr round large color="accent" type="submit" 
-            [hidden]="isEditMode()" 
+            [hidden]="!isEditMode()" 
             [disabled]="profileForm.invalid || form.invalid"
             (xhrClick)="submitForm($event)">
             Submit
