--- a/src/components/profile-form/profile-form.html
+++ b/src/components/profile-form/profile-form.html
@@ -1,10 +1,9 @@
-<form [ngClass]="{'edit-mode': isEditMode(), 'read-only': !isEditMode()}" [formGroup]="profileForm" #form="ngForm" (ngSubmit)="xhr.submit($event)" 
-    >
+<form [ngClass]="{'edit-mode': isEditMode(), 'read-only': !isEditMode()}" [formGroup]="profileForm" #form="ngForm" (ngSubmit)="xhr.submit($event)">
     <ion-list>
         <div class="row form-group" *ngIf="usage === 'profile'">
             <ion-grid>
                 <ion-row>
-                    <ion-col col-12 col-sm-12 col-md-4 >
+                    <ion-col col-12 col-sm-12 col-md-4>
                         <ion-label class="form-label h1">Last Name <span *ngIf="isEditMode()">*</span></ion-label>
                         <ion-item round>
                             <ion-input name="lastName" formControlName="lastName" [disabled]="!isEditMode()"></ion-input>
@@ -14,19 +13,19 @@
                         </div>
                     </ion-col>
                     <ion-col col-12 col-sm-12 col-md-4>
-                    <ion-label class="form-label h1">First Name <span *ngIf="isEditMode()">*</span></ion-label>
-                    <ion-item round>
-                        <ion-input name="firstName" formControlName="firstName" [disabled]="!isEditMode()"></ion-input>
-                    </ion-item>
-                    <div class="error-message" *ngIf="profileForm.get('firstName')?.dirty &&  profileForm.get('firstName').invalid">
-                        {{ errors.firstName }}
-                    </div>
+                        <ion-label class="form-label h1">First Name <span *ngIf="isEditMode()">*</span></ion-label>
+                        <ion-item round>
+                            <ion-input name="firstName" formControlName="firstName" [disabled]="!isEditMode()"></ion-input>
+                        </ion-item>
+                        <div class="error-message" *ngIf="profileForm.get('firstName')?.dirty &&  profileForm.get('firstName').invalid">
+                            {{ errors.firstName }}
+                        </div>
                     </ion-col>
                     <ion-col col-12 col-sm-12 col-md-4>
-                    <ion-label class="form-label h1">Middle Name</ion-label>
-                    <ion-item round>
-                        <ion-input name="middleName" formControlName="middleName" [disabled]="!isEditMode()"></ion-input>
-                    </ion-item>
+                        <ion-label class="form-label h1">Middle Name</ion-label>
+                        <ion-item round>
+                            <ion-input name="middleName" formControlName="middleName" [disabled]="!isEditMode()"></ion-input>
+                        </ion-item>
                     </ion-col>
                 </ion-row>
                 <div *ngIf="formType === 'doctor'">
@@ -94,7 +93,7 @@
                     </ion-col>
                 </ion-row>
                 <ion-row>
-                    <ion-col  col-12 col-sm-6 col-md-6>
+                    <ion-col col-12 col-sm-6 col-md-6>
                         <ion-label class="form-label h1">Gender <span *ngIf="isEditMode()">*</span></ion-label>
                         <ion-list *ngIf="isEditMode()" radio-group name="gender" formControlName="gender">
                             <ion-item *ngFor="let gender of genderList">
@@ -107,7 +106,7 @@
                             {{ errors.gender }}
                         </div>
                     </ion-col>
-                    <ion-col  col-12 col-sm-6 col-md-6>
+                    <ion-col col-12 col-sm-6 col-md-6>
                         <ion-label class="form-label h1">Birth Date <span *ngIf="isEditMode()">*</span></ion-label>
                         <ion-item round>
                             <ion-input type="date" name="birthDate" formControlName="birthDate" [disabled]="!isEditMode()"></ion-input>
@@ -125,7 +124,7 @@
                         </ion-item>
                     </ion-col>
                 </ion-row>
-                
+
             </ion-grid>
         </div>
         <!-- <div class="row form-group" *ngIf="usage !== 'profile'">
@@ -139,9 +138,7 @@
         </div> -->
     </ion-list>
     <div center>
-        <xhr-button #xhr round large color="accent" type="submit" 
-            [hidden]="!isEditMode()" 
-            [disabled]="profileForm.invalid || form.invalid"
+        <xhr-button #xhr round large color="accent" type="submit" [hidden]="!isEditMode()" [disabled]="profileForm.invalid || form.invalid"
             (xhrClick)="submitForm($event)">
             Submit
         </xhr-button>
