initial add sched layout

--- a/src/components/profile-form/profile-form.html
+++ b/src/components/profile-form/profile-form.html
@@ -97,7 +97,7 @@
                         <ion-label class="form-label h1">Gender <span *ngIf="isEditMode()">*</span></ion-label>
                         <ion-list *ngIf="isEditMode()" radio-group name="gender" formControlName="gender">
                             <ion-item *ngFor="let gender of genderList">
-                                <ion-radio color="primary" value="{{ gender?.id }}" [disabled]="!isEditMode()"></ion-radio>
+                                <ion-radio color="primary" value="{{ gender?.code }}" [disabled]="!isEditMode()"></ion-radio>
                                 <ion-label>{{ gender?.description }}</ion-label>
                             </ion-item>
                         </ion-list>
