--- a/src/components/profile-form/profile-form.html
+++ b/src/components/profile-form/profile-form.html
@@ -28,7 +28,7 @@
                         </ion-item>
                     </ion-col>
                 </ion-row>
-                <div *ngIf="formType === 'doctor'">
+                <div [hidden]="formType !== 'doctor'">
                     <ion-row>
                         <ion-col col-12 col-sm-6 col-md-6>
                             <ion-label class="form-label h1">PRC License <span *ngIf="isEditMode()">*</span></ion-label>
@@ -82,7 +82,7 @@
                             {{ errors.email }}
                         </div>
                     </ion-col>
-                    <ion-col col-12 col-sm-12 col-md-6>
+                    <!-- <ion-col col-12 col-sm-12 col-md-6>
                         <ion-label class="form-label h1">Contact No. <span *ngIf="isEditMode()">*</span></ion-label>
                         <ion-item round>
                             <ion-input name="contactNo" formControlName="contactNo" [disabled]="!isEditMode()"></ion-input>
@@ -90,6 +90,22 @@
                         <div class="error-message" *ngIf="profileForm.get('contactNo')?.dirty &&  profileForm.get('contactNo').invalid">
                             {{ errors.contactNo }}
                         </div>
+                    </ion-col> -->
+                </ion-row>
+                <ion-row>
+                    <ion-col col-6 col-sm-6 col-md-6>
+                        <ion-label class="form-label h1">Contact</ion-label>
+                    </ion-col>
+                    <ion-col col-6 col-sm-6 col-md-6>
+                        <button clear ion-button small (click)="addLine($event)">+ add Contact</button>
+                    </ion-col>
+                </ion-row>
+                <ion-row padding>
+                    <ion-col col-4 col-sm-4 col-md-4>
+                        <ion-label class="form-label">Type</ion-label>
+                    </ion-col>
+                    <ion-col col-5 col-sm-5 col-md-5>
+                        <ion-label class="form-label">Detail</ion-label>
                     </ion-col>
                 </ion-row>
                 <ion-row>
