clinic sched modal

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -143,6 +143,31 @@ ion-content{
 			background-color: $light !important;
 		}
 	}
+
+	// Rounded Ion-datetime
+	ion-item.item-datetime[round] {
+		display: inline-block;
+		border: 1px solid $primary-light !important;
+		box-shadow: none !important;
+		-webkit-border-radius: 4.4em !important;
+		border-radius: 4.4rem !important;
+		height: 35px !important;
+		min-height: 35px !important;
+
+		button {
+			border-radius: 4.4rem !important;
+		}
+
+		ion-label {
+			display: none;
+		}
+
+		ion-datetime {
+			padding: 0px;
+		}	
+	}
+
+
 	// Select Inputs
 	ion-item.item-select {
 		padding-left: 15px;
@@ -254,6 +279,21 @@ ion-content{
 			padding-right: 35px;
 		}
 	}
+
+	// ION DATE TIME
+
+	// ion-datetime {
+	// 	background: none !important;
+	//     border: none !important;
+
+	// 	.input-wrapper {
+	// 		border: 1px solid $primary-light !important;
+	// 		-webkit-border-radius: 4.4em !important;
+	// 		border-radius: 4.4rem !important;
+	// 		height: 35px !important;
+	// 		min-height: 35px !important;
+	// 	}
+	// }
 }
 
 .control-bar{
