--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -201,6 +201,18 @@ ion-content{
 		}
 	}
 
+	// Invalid Rounded Selects that are invalid and not disabled
+	ion-item.item-select[round]:not(.ng-dirty).ng-invalid:not(.item-input-disabled) {
+		display: inline-block;
+		border: 1px solid $primary-light !important;
+	}
+
+	// Invalid Rounded Selects that are invalid and not disabled
+	ion-item.item-select[round].ng-invalid:not(.item-input-disabled) {
+		display: inline-block;
+		border: 1px solid $danger !important;
+	}
+
 	// Radio Buttons
 	ion-list[role="radiogroup"]{
 		display: inline-block;
@@ -279,21 +291,6 @@ ion-content{
 			padding-right: 35px;
 		}
 	}
-
-	// ION DATE TIME
-
-	// ion-datetime {
-	// 	background: none !important;
-	//     border: none !important;
-
-	// 	.input-wrapper {
-	// 		border: 1px solid $primary-light !important;
-	// 		-webkit-border-radius: 4.4em !important;
-	// 		border-radius: 4.4rem !important;
-	// 		height: 35px !important;
-	// 		min-height: 35px !important;
-	// 	}
-	// }
 }
 
 .control-bar{
