--- a/src/components/profile-form/profile-form.html
+++ b/src/components/profile-form/profile-form.html
@@ -4,7 +4,7 @@
             <ion-grid>
                 <ion-row>
                     <ion-col col-12 col-sm-12 col-md-4>
-                        <ion-label class="form-label h1">Last Name <span *ngIf="isEditMode()">*</span></ion-label>
+                        <ion-label class="form-label">Last Name <span *ngIf="isEditMode()">*</span></ion-label>
                         <ion-item round>
                             <ion-input name="lastName" formControlName="lastName" [disabled]="!isEditMode()"></ion-input>
                         </ion-item>
@@ -13,7 +13,7 @@
                         </div>
                     </ion-col>
                     <ion-col col-12 col-sm-12 col-md-4>
-                        <ion-label class="form-label h1">First Name <span *ngIf="isEditMode()">*</span></ion-label>
+                        <ion-label class="form-label">First Name <span *ngIf="isEditMode()">*</span></ion-label>
                         <ion-item round>
                             <ion-input name="firstName" formControlName="firstName" [disabled]="!isEditMode()"></ion-input>
                         </ion-item>
@@ -22,7 +22,7 @@
                         </div>
                     </ion-col>
                     <ion-col col-12 col-sm-12 col-md-4>
-                        <ion-label class="form-label h1">Middle Name</ion-label>
+                        <ion-label class="form-label">Middle Name</ion-label>
                         <ion-item round>
                             <ion-input name="middleName" formControlName="middleName" [disabled]="!isEditMode()"></ion-input>
                         </ion-item>
@@ -31,7 +31,7 @@
                 <div [hidden]="formType !== 'doctor'">
                     <ion-row>
                         <ion-col col-12 col-sm-6 col-md-6>
-                            <ion-label class="form-label h1">PRC License <span *ngIf="isEditMode()">*</span></ion-label>
+                            <ion-label class="form-label">PRC License <span *ngIf="isEditMode()">*</span></ion-label>
                             <ion-item round>
                                 <ion-input type="number" name="prc" formControlName="prc" [disabled]="!isEditMode()"></ion-input>
                             </ion-item>
@@ -40,7 +40,7 @@
                             </div>
                         </ion-col>
                         <ion-col col-12 col-sm-6 col-md-6>
-                            <ion-label class="form-label h1">PTR <span *ngIf="isEditMode()">*</span></ion-label>
+                            <ion-label class="form-label">PTR <span *ngIf="isEditMode()">*</span></ion-label>
                             <ion-item round>
                                 <ion-input type="number" name="ptr" formControlName="ptr" [disabled]="!isEditMode()"></ion-input>
                             </ion-item>
@@ -51,10 +51,10 @@
                     </ion-row>
                     <ion-row>
                         <ion-col col-12 col-sm-6 col-md-6>
-                            <ion-label class="form-label h1">Medical Arts <span *ngIf="isEditMode()">*</span></ion-label>
+                            <ion-label class="form-label">Medical Arts <span *ngIf="isEditMode()">*</span></ion-label>
                             <ion-item round>
                                 <ion-select class="options" name="medicalArt" formControlName="medicalArt">
-                                    <ion-option *ngFor="let type of medicalArts" value="{{ type?.code }}">{{ type?.description }}</ion-option>
+                                    <ion-option *ngFor="let type of medicalArts" [value]="type?.code">{{ type?.description }}</ion-option>
                                 </ion-select>
                             </ion-item>
                             <div class="error-message" *ngIf="profileForm.get('medicalArt')?.dirty &&  profileForm.get('medicalArt').invalid">
@@ -62,7 +62,7 @@
                             </div>
                         </ion-col>
                         <ion-col col-12 col-sm-6 col-md-6>
-                            <ion-label class="form-label h1">Specialization <span *ngIf="isEditMode()">*</span></ion-label>
+                            <ion-label class="form-label">Specialization <span *ngIf="isEditMode()">*</span></ion-label>
                             <ion-item round>
                                 <ion-input name="specialization" formControlName="specialization" [disabled]="!isEditMode()"></ion-input>
                             </ion-item>
@@ -74,7 +74,7 @@
                 </div>
                 <ion-row>
                     <ion-col col-12 col-sm-12 col-md-6>
-                        <ion-label class="form-label h1">Email <span *ngIf="isEditMode()">*</span></ion-label>
+                        <ion-label class="form-label">Email <span *ngIf="isEditMode()">*</span></ion-label>
                         <ion-item round>
                             <ion-input type="email" name="email" formControlName="email" [disabled]="!isEditMode()"></ion-input>
                         </ion-item>
@@ -82,25 +82,16 @@
                             {{ errors.email }}
                         </div>
                     </ion-col>
-                    <!-- <ion-col col-12 col-sm-12 col-md-6>
-                        <ion-label class="form-label h1">Contact No. <span *ngIf="isEditMode()">*</span></ion-label>
-                        <ion-item round>
-                            <ion-input name="contactNo" formControlName="contactNo" [disabled]="!isEditMode()"></ion-input>
-                        </ion-item>
-                        <div class="error-message" *ngIf="profileForm.get('contactNo')?.dirty &&  profileForm.get('contactNo').invalid">
-                            {{ errors.contactNo }}
-                        </div>
-                    </ion-col> -->
                 </ion-row>
-                <ion-row>
+                <ion-row class="contact-control">
                     <ion-col col-6 col-sm-6 col-md-6>
-                        <ion-label class="form-label h1">Contact</ion-label>
+                        <ion-label class="form-label">Contact</ion-label>
                     </ion-col>
                     <ion-col col-6 col-sm-6 col-md-6>
-                        <button clear ion-button small (click)="addLine($event)">+ add Contact</button>
+                        <ion-label class="form-link" (click)="addContact($event)"  color="accent-dark">+ add Contact</ion-label>
                     </ion-col>
                 </ion-row>
-                <ion-row padding>
+                <ion-row class="contact-header">
                     <ion-col col-4 col-sm-4 col-md-4>
                         <ion-label class="form-label">Type</ion-label>
                     </ion-col>
@@ -108,12 +99,30 @@
                         <ion-label class="form-label">Detail</ion-label>
                     </ion-col>
                 </ion-row>
+                <ion-row class="contact-details" *ngFor="let contact of contacts; let idx = index">
+                    <ion-col col-4 col-sm-4 col-md-4>
+                        <ion-label>{{contactType[contact.contactType]}}</ion-label>
+                    </ion-col>
+                    <ion-col col-5 col-sm-5 col-md-5>
+                        <ion-label>{{contact.contactDetail}}</ion-label>
+                    </ion-col>
+                    <ion-col col-3 col-sm-3 col-md-3>
+                        <ion-icon name="trash" (click)="removeContact($event,idx)"></ion-icon>
+                    </ion-col>
+                </ion-row>
+                <ion-row *ngIf="errors.contactNo">
+                    <ion-col col-12 col-sm-12 col-md-12>
+                         <div class="error-message">
+                            {{ errors.contactNo }}
+                        </div>
+                    </ion-col>
+                </ion-row>
                 <ion-row>
                     <ion-col col-12 col-sm-6 col-md-6>
-                        <ion-label class="form-label h1">Gender <span *ngIf="isEditMode()">*</span></ion-label>
+                        <ion-label class="form-label">Gender <span *ngIf="isEditMode()">*</span></ion-label>
                         <ion-list *ngIf="isEditMode()" radio-group name="gender" formControlName="gender">
                             <ion-item *ngFor="let gender of genderList">
-                                <ion-radio color="primary" value="{{ gender?.id }}" [disabled]="!isEditMode()"></ion-radio>
+                                <ion-radio color="primary" [value]="gender?.id" [disabled]="!isEditMode()"></ion-radio>
                                 <ion-label>{{ gender?.description }}</ion-label>
                             </ion-item>
                         </ion-list>
@@ -123,7 +132,7 @@
                         </div>
                     </ion-col>
                     <ion-col col-12 col-sm-6 col-md-6>
-                        <ion-label class="form-label h1">Birth Date <span *ngIf="isEditMode()">*</span></ion-label>
+                        <ion-label class="form-label">Birth Date <span *ngIf="isEditMode()">*</span></ion-label>
                         <ion-item round>
                             <ion-input type="date" name="birthDate" formControlName="birthDate" [disabled]="!isEditMode()"></ion-input>
                         </ion-item>
@@ -134,7 +143,7 @@
                 </ion-row>
                 <ion-row>
                     <ion-col>
-                        <ion-label class="form-label h1">Address</ion-label>
+                        <ion-label class="form-label">Address</ion-label>
                         <ion-item round>
                             <ion-textarea name="address" formControlName="address" [disabled]="!isEditMode()"></ion-textarea>
                         </ion-item>
@@ -144,7 +153,7 @@
             </ion-grid>
         </div>
         <!-- <div class="row form-group" *ngIf="usage !== 'profile'">
-            <ion-label class="form-label h1">Email <span *ngIf="isEditMode()">*</span></ion-label>
+            <ion-label class="form-label">Email <span *ngIf="isEditMode()">*</span></ion-label>
             <ion-item round>
                 <ion-input type="email" name="email" formControlName="email" [disabled]="!isEditMode()"></ion-input>
             </ion-item>
