mock add clinic

--- a/src/components/change-password-form/change-password-form.html
+++ b/src/components/change-password-form/change-password-form.html
@@ -1,4 +1,4 @@
-<form [formGroup]="changePasswordForm" (ngSubmit)="submitForm(xhr)">
+<form [formGroup]="changePasswordForm" #form="ngForm" (ngSubmit)="submitForm(xhr)">
     <ion-list>
         <div class="form-group">
             <ion-label class="form-label h1">Old Password</ion-label>
