--- a/src/components/schedule-modal/schedule-modal.html
+++ b/src/components/schedule-modal/schedule-modal.html
@@ -1,15 +1,19 @@
 <ion-header>
     <ion-navbar color="primary">
-        <ion-buttons>
-            <button ion-button (click)="cancel()" type="button" class="left">Cancel</button>
-            <button ion-button (click)="returnSchedule()" type="submit" class="right" [disabled]="scheduleForm.invalid">Save</button>
+        <ion-buttons start>
+            <button ion-button icon-only navPop><ion-icon name="close"></ion-icon></button>
+        </ion-buttons>
+        <ion-title>
+            {{ mode }} Schedule
+        </ion-title>
+        <ion-buttons end>
+            <button ion-button icon-only (click)="save()"><ion-icon name="checkmark"></ion-icon></button>
         </ion-buttons>
     </ion-navbar>
 </ion-header>
 <ion-content>
     <div class="modal-form">
-        <ion-label class="form-label h1">{{ mode }} Schedule</ion-label>
-        <form [formGroup]="scheduleForm" (ngSubmit)="submitForm()" novalidate>
+        <form [formGroup]="scheduleForm" #form="ngForm" (ngSubmit)="save()">
             <ion-list>
                 <div class="form-group">
                     <ion-label class="form-label h1">Day *</ion-label>
@@ -23,16 +27,14 @@
                     </div>
                     <ion-label class="form-label h1">From *</ion-label>
                     <ion-item round>
-                        <ion-datetime displayFormat="hh:mm a" name="from" formControlName="from"></ion-datetime>
-                        <!--<ion-input type="time" name="from" formControlName="from"></ion-input>-->
+                        <ion-datetime displayFormat="h:mm a" name="from" formControlName="from"></ion-datetime>
                     </ion-item>
                     <div class="error-message" *ngIf="scheduleForm.get('from').dirty && scheduleForm.get('from').invalid">
                         {{ errors.from }}
                     </div>
                     <ion-label class="form-label h1">To *</ion-label>
                     <ion-item round>
-                        <!--<ion-input type="time" name="to" formControlName="to"></ion-input>-->
-                        <ion-datetime displayFormat="hh:mm a" name="to" formControlName="to"></ion-datetime>
+                        <ion-datetime displayFormat="h:mm a" name="to" formControlName="to"></ion-datetime>
                     </ion-item>
                     <div class="error-message" *ngIf="scheduleForm.get('to').dirty && scheduleForm.get('to').invalid">
                         {{ errors.to }}
