--- a/src/components/schedule-modal/schedule-modal.html
+++ b/src/components/schedule-modal/schedule-modal.html
@@ -19,7 +19,7 @@
                     <ion-label class="form-label h1">Day *</ion-label>
                     <ion-item round>
                         <ion-select class="options" name="day" formControlName="day">
-                            <ion-option *ngFor="let d of days" value="{{ d?.code }}">{{ d?.description }}</ion-option>
+                            <ion-option *ngFor="let day of days; let i = index" [value]="i">{{ day }}</ion-option>
                         </ion-select>
                     </ion-item>
                     <div class="error-message" *ngIf="scheduleForm.get('day').dirty &&  scheduleForm.get('day').invalid">
