--- a/src/components/schedule-modal/schedule-modal.html
+++ b/src/components/schedule-modal/schedule-modal.html
@@ -27,14 +27,14 @@
                     </div>
                     <ion-label class="form-label h1">From *</ion-label>
                     <ion-item round>
-                        <ion-datetime displayFormat="h:mm a" name="from" formControlName="from"></ion-datetime>
+                        <ion-datetime displayFormat="h:mm a" pickerFormat="h:mm a" name="from" formControlName="from"></ion-datetime>
                     </ion-item>
                     <div class="error-message" *ngIf="scheduleForm.get('from').dirty && scheduleForm.get('from').invalid">
                         {{ errors.from }}
                     </div>
                     <ion-label class="form-label h1">To *</ion-label>
                     <ion-item round>
-                        <ion-datetime displayFormat="h:mm a" name="to" formControlName="to"></ion-datetime>
+                        <ion-datetime displayFormat="h:mm a" pickerFormat="h:mm a" name="to" formControlName="to"></ion-datetime>
                     </ion-item>
                     <div class="error-message" *ngIf="scheduleForm.get('to').dirty && scheduleForm.get('to').invalid">
                         {{ errors.to }}
