--- a/src/components/profile-form/profile-form.html
+++ b/src/components/profile-form/profile-form.html
@@ -104,7 +104,7 @@
                         <ion-label>{{contactType[contact.contactType]}}</ion-label>
                     </ion-col>
                     <ion-col col-5 col-sm-5 col-md-5>
-                        <ion-label>{{contact.contactDetail}}</ion-label>
+                        <ion-label>{{contact.contact}}</ion-label>
                     </ion-col>
                     <ion-col col-3 col-sm-3 col-md-3>
                         <ion-icon name="trash" (click)="removeContact($event,idx)"></ion-icon>
